# clio-sdk-mvp

./: .editorconfig  .gitignore  .redocly.yaml  .spectral.yaml  INSTRUCTION.md  Makefile  README.md  clio_sdk.py  openapi-python-client-config.yaml  openapi-python-sdk-config.yaml  openapi_sdk.yaml  pyproject.toml  requirements.txt  resources.py  token_store.py
clio_sdk/: .gitignore  INSTRUCTIONS.md  Makefile.md  README.md  __init__.py  config.json  constants.py  openapi-python-client-config.yaml  openapi_sdk.yaml  pyproject.toml  requirements.txt  resources.py  setup.py  suggested_x_tagGroups.yaml
clio_sdk/.copilot/: config.json
clio_sdk/adapter_factory/: base.py  i_adapter_factory.py  matters.py  transformer.py
clio_sdk/api/: accounting.py  activities.py  api.py  billing.py  calendars.py  clio_payments.py  communications.py  contacts.py  court_rules.py  custom_fields.py  documents.py  legal_aid_england_&_wales.py  legal_aid_us.py  payments.py  reporting.py  tasks.py  trust.py  users.py  webhooks.py
clio_sdk/api_modules/: api_activities.py  api_activity_descriptions.py  api_activity_rates.py  api_allocations.py  api_bank_accounts.py  api_bank_transactions.py  api_bank_transfers.py  api_bill_themes.py  api_billable_clients.py  api_billable_matters.py  api_billing_settings.py  api_bills.py  api_calendar_entries.py  api_calendar_entry_event_types.py  api_calendar_visibilities.py  api_calendars.py  api_civil_certificated_rates.py  api_civil_controlled_rates.py  api_clients.py  api_clio_payments_links.py  api_clio_payments_payments.py  api_comments.py  api_contacts.py  (+59 more)
(+3883 files in other folders)
