### pyproject.toml
[project]
name = "clio-sdk"
version = "0.1.0"
description = "Unified SDK for Clio API integration"
authors = ["Travis Crawford <solutionpartner@cfelab.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
    "fastapi>=0.100",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "ruff"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["clio_sdk*"] } }

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.11
strict = true
ignore_missing_imports = true
